<resources>
    <string name="app_name">AppZapateriaNext</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_carrito">Carrito</string>

    <string name="menu_zapatilla">Zapatillas</string>
    <string name="menu_empleado">Perfil</string>
    <string name="menu_cerrarSesion">Cerrar Sesion</string>
    <string name="menu_detalleVenta">Carrito</string>
    <string name="menu_venta">Ventas</string>

</resources>
